* Round the ticks
* Add used ram in percent
* Fix one variable
* Round the kdr
* The title can now be longer than 16 characters. You can now make title that have up to 32 characters