@@ -49,6 +49,7 @@ public final class ScoreboardStats extends org.bukkit.plugin.java.JavaPlugin {
 
         getCommand(Commands.RELOAD_COMMAND) .setExecutor(new com.github.games647.scoreboardstats.commands.ReloadCommand     (this));
         getCommand(Commands.HIDE_COMMAND)   .setExecutor(new com.github.games647.scoreboardstats.commands.DisableCommand    (this));
+        getCommand(Commands.SIDEBAR)        .setExecutor(new com.github.games647.scoreboardstats.commands.SidebarCommand    ());
 
         SbManager.regAll();
 
