@@ -4,4 +4,5 @@ public final class Commands  {
 
     public static final String RELOAD_COMMAND = "sb:reload";
     public static final String HIDE_COMMAND   = "sb:toggle";
+    public static final String SIDEBAR        = "sidebar";
 }
